# QSlicer

./: .gitignore  CMakeLists.txt  Line.cpp  Line.hpp  Point.cpp  Point.hpp  README.md  Slice.cpp  Slice.hpp  Triangle.cpp  Triangle.hpp  Writer.cpp  Writer.hpp  common.hpp  io.cpp  io.hpp  main.cpp  sloc.sh  visualize_perimeter.cpp  visualizer.cpp  visualizer_support.cpp
